--- a/dudo/dudo.cabal
+++ b/dudo/dudo.cabal
@@ -23,11 +23,12 @@ library
                      , hashable
                      , vector
   default-language:    Haskell2010
+  ghc-options:        -Wall -Werror
 
 executable dudo
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:       base
                      , dudo
                      , regret
