--- a/kuhn-poker/kuhn-poker.cabal
+++ b/kuhn-poker/kuhn-poker.cabal
@@ -22,11 +22,12 @@ library
                      , hashable
                      , vector
   default-language:    Haskell2010
+  ghc-options:        -Wall -Werror
 
 executable kuhn-poker
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:       base
                      , kuhn-poker
                      , regret
