--- a/rps/rps.cabal
+++ b/rps/rps.cabal
@@ -25,7 +25,7 @@ library
 executable rps
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:       base
                      , rps
                      , regret
