--- a/regret/regret.cabal
+++ b/regret/regret.cabal
@@ -34,8 +34,8 @@ library
                       ,hashtables
                       ,monad-loops
                       ,mtl
-                      ,mwc-random
                       ,optparse-applicative
+                      ,pcg-random
                       ,vector
   default-language:    Haskell2010
   ghc-options:        -Wall -Werror
