--- a/stack.yaml
+++ b/stack.yaml
@@ -43,7 +43,8 @@ packages:
 - 'rps'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- 'pcg-random-0.1.3.4'
 
 # Override default flag values for local packages and extra-deps
 flags: {}
