--- a/regret/regret.cabal
+++ b/regret/regret.cabal
@@ -28,6 +28,7 @@ library
                        Data.Normalizing
                        Game.Regret.Internal
                        Game.Regret.Monad
+                       Orphans
   build-depends:       base >= 4.7 && < 5
                       ,containers
                       ,hashable
@@ -36,6 +37,7 @@ library
                       ,mtl
                       ,optparse-applicative
                       ,pcg-random
+                      ,strict
                       ,vector
   default-language:    Haskell2010
   ghc-options:        -Wall -Werror
