--- a/select-game/select-game.cabal
+++ b/select-game/select-game.cabal
@@ -24,9 +24,10 @@ library
                        Game.Select.Items
                        Orphans
   build-depends:       base >= 4.7 && < 5
-                      ,dlist
                       ,regret
+                      ,dlist
                       ,hashable
+                      ,strict
                       ,vector
   default-language:    Haskell2010
   ghc-options:        -Wall -Werror
