--- a/regret/regret.cabal
+++ b/regret/regret.cabal
@@ -30,6 +30,7 @@ library
                        Game.Regret.Monad
                        Orphans
   build-depends:       base >= 4.7 && < 5
+                      ,MemoTrie
                       ,containers
                       ,hashable
                       ,hashtables
