--- a/rps/rps.cabal
+++ b/rps/rps.cabal
@@ -3,7 +3,7 @@ version:             0.1.0.0
 -- synopsis:
 -- description:
 homepage:            https://github.com/davidspies/rps#readme
-license:             BSD3
+license:             GPLv3
 license-file:        ../LICENSE
 author:              David Spies
 maintainer:          dnspies@gmail.com
