--- a/rps/rps.cabal
+++ b/rps/rps.cabal
@@ -3,8 +3,8 @@ version:             0.1.0.0
 -- synopsis:
 -- description:
 homepage:            https://github.com/davidspies/rps#readme
-license:             GPLv3
-license-file:        ../LICENSE
+license:             GPL-3
+license-file:        LICENSE
 author:              David Spies
 maintainer:          dnspies@gmail.com
 copyright:           2017 David Spies
