--- a/regret/regret.cabal
+++ b/regret/regret.cabal
@@ -1,48 +1,50 @@
-name:                regret
-version:             0.1.0.0
--- synopsis:
--- description:
-homepage:            https://github.com/davidspies/regret#readme
-license:             GPL-3
-license-file:        LICENSE
-author:              David Spies
-maintainer:          dnspies@gmail.com
-copyright:           2017 David Spies
-category:            Game
-build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
-
-library
-  hs-source-dirs:      src
-  exposed-modules:     Data.Dist
-                       Data.Map.Generic
-                       Data.Map.Mutable.Generic
-                       Data.Vector.Class
-                       Game
-                       Game.PlayerMap
-                       Game.Regret
-  other-modules:       Control.Monad.Random
-                       Control.Monad.Scale
-                       Data.Dist.Internal
-                       Data.Normalizing
-                       Game.Regret.Internal
-                       Game.Regret.Monad
-                       Orphans
-  build-depends:       base >= 4.7 && < 5
-                      ,MemoTrie
-                      ,containers
-                      ,hashable
-                      ,hashtables
-                      ,monad-loops
-                      ,mtl
-                      ,optparse-applicative
-                      ,pcg-random
-                      ,strict
-                      ,vector
-  default-language:    Haskell2010
-  ghc-options:        -Wall -Werror
+name: regret
+version: 0.1.0.0
+cabal-version: >=1.10
+build-type: Simple
+license: GPL-3
+license-file: LICENSE
+copyright: 2017 David Spies
+maintainer: dnspies@gmail.com
+homepage: https://github.com/davidspies/regret#readme
+category: Game
+author: David Spies
+extra-source-files:
+    README.md
 
 source-repository head
-  type:     git
-  location: https://github.com/davidspies/regret
+    type: git
+    location: https://github.com/davidspies/regret
+
+library
+    exposed-modules:
+        Data.Dist
+        Data.Map.Generic
+        Data.Map.Mutable.Generic
+        Data.Vector.Class
+        Game
+        Game.PlayerMap
+        Game.Regret
+    build-depends:
+        base >=4.7 && <5,
+        MemoTrie -any,
+        containers -any,
+        hashable -any,
+        hashtables -any,
+        monad-loops -any,
+        mtl -any,
+        optparse-applicative -any,
+        pcg-random -any,
+        strict -any,
+        vector -any
+    default-language: Haskell2010
+    hs-source-dirs: src
+    other-modules:
+        Control.Monad.Random
+        Control.Monad.Scale
+        Data.Dist.Internal
+        Data.Normalizing
+        Game.Regret.Internal
+        Game.Regret.Monad
+        Orphans
+    ghc-options: -Wall -Werror
