--- a/select-game/select-game.cabal
+++ b/select-game/select-game.cabal
@@ -1,37 +1,39 @@
-name:                select-game
-version:             0.1.0.0
--- synopsis:
--- description:
-homepage:            https://github.com/davidspies/select-game#readme
-license:             GPL-3
-license-file:        LICENSE
-author:              David Spies
-maintainer:          dnspies@gmail.com
-copyright:           2017 David Spies
-category:            Game
-build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
-
-library
-  hs-source-dirs:      src
-  exposed-modules:     Data.Some
-                       Control.Monad.Select
-                       Game.Select
-  other-modules:       Control.Monad.Select.Internal
-                       Game.Select.Helpers
-                       Game.Select.Internal
-                       Game.Select.Items
-                       Orphans
-  build-depends:       base >= 4.7 && < 5
-                      ,regret
-                      ,dlist
-                      ,hashable
-                      ,strict
-                      ,vector
-  default-language:    Haskell2010
-  ghc-options:        -Wall -Werror
+name: select-game
+version: 0.1.0.0
+cabal-version: >=1.10
+build-type: Simple
+license: GPL-3
+license-file: LICENSE
+copyright: 2017 David Spies
+maintainer: dnspies@gmail.com
+homepage: https://github.com/davidspies/select-game#readme
+category: Game
+author: David Spies
+extra-source-files:
+    README.md
 
 source-repository head
-  type:     git
-  location: https://github.com/davidspies/select-game
+    type: git
+    location: https://github.com/davidspies/select-game
+
+library
+    exposed-modules:
+        Data.Some
+        Control.Monad.Select
+        Game.Select
+    build-depends:
+        base >=4.7 && <5,
+        regret -any,
+        dlist -any,
+        hashable -any,
+        strict -any,
+        vector -any
+    default-language: Haskell2010
+    hs-source-dirs: src
+    other-modules:
+        Control.Monad.Select.Internal
+        Game.Select.Helpers
+        Game.Select.Internal
+        Game.Select.Items
+        Orphans
+    ghc-options: -Wall -Werror
