--- a/dudo/dudo.cabal
+++ b/dudo/dudo.cabal
@@ -28,7 +28,6 @@ library
         vector -any
     default-language: Haskell2010
     hs-source-dirs: src
-    ghc-options: -Wall -Werror
 
 executable dudo
     main-is: Main.hs
@@ -40,4 +39,4 @@ executable dudo
         optparse-applicative -any
     default-language: Haskell2010
     hs-source-dirs: app
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
