--- a/kuhn-poker/kuhn-poker.cabal
+++ b/kuhn-poker/kuhn-poker.cabal
@@ -27,7 +27,6 @@ library
         vector -any
     default-language: Haskell2010
     hs-source-dirs: src
-    ghc-options: -Wall -Werror
 
 executable kuhn-poker
     main-is: Main.hs
@@ -38,4 +37,4 @@ executable kuhn-poker
         select-game -any
     default-language: Haskell2010
     hs-source-dirs: app
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
