Move VecMap to its own module

--- a/regret/regret.cabal
+++ b/regret/regret.cabal
@@ -21,6 +21,7 @@ library
         Data.Dist
         Data.Map.Generic
         Data.Map.Mutable.Generic
+        Data.Map.VecMap
         Data.Vector.Class
         Game
         Game.PlayerMap
