--- a/dudo/dudo.cabal
+++ b/dudo/dudo.cabal
@@ -21,7 +21,7 @@ library
         Game.Dudo
     build-depends:
         base >=4.7 && <5,
-        regret -any,
+        game -any,
         select-game -any,
         MemoTrie -any,
         hashable -any,
