--- a/game/game.cabal
+++ b/game/game.cabal
@@ -1,11 +1,11 @@
-name: select-game
+name: game
 version: 0.1.0.0
 cabal-version: >=1.10
 build-type: Simple
-license: GPL-3
+license: BSD3
 license-file: LICENSE
 copyright: 2017 David Spies
-maintainer: dnspies@gmail.com
+maintainer: example@example.com
 homepage: https://github.com/davidspies/regret-solver#readme
 category: Game
 author: David Spies
@@ -18,21 +18,26 @@ source-repository head
 
 library
     exposed-modules:
-        Data.Some
-        Control.Monad.Select
-        Game.Select
+        Control.Monad.Random
+        Data.Dist
+        Data.Map.Generic
+        Data.Map.Mutable.Generic
+        Data.Map.VecMap
+        Data.Vector.Class
+        Game
+        Game.PlayerMap
     build-depends:
         base >=4.7 && <5,
-        game -any,
-        dlist -any,
+        MemoTrie -any,
+        containers -any,
         hashable -any,
+        hashtables -any,
+        pcg-random -any,
         strict -any,
         vector -any
     default-language: Haskell2010
     hs-source-dirs: src
     other-modules:
-        Control.Monad.Select.Internal
-        Game.Select.Helpers
-        Game.Select.Internal
-        Game.Select.Items
+        Data.Dist.Internal
+        Data.Strict.Maybe.Util
         Orphans
