--- a/rps/rps.cabal
+++ b/rps/rps.cabal
@@ -21,7 +21,7 @@ library
         Game.RPS
     build-depends:
         base >=4.7 && <5,
-        regret -any,
+        game -any,
         containers -any
     default-language: Haskell2010
     hs-source-dirs: src
