--- a/stack.yaml
+++ b/stack.yaml
@@ -36,6 +36,7 @@ resolver: lts-9.2
 # non-dependency (i.e. a user package), and its test suites and benchmarks
 # will not be run. This is useful for tweaking upstream packages.
 packages:
+- 'game'
 - 'regret'
 - 'select-game'
 - 'dudo'
