--- a/game/game.cabal
+++ b/game/game.cabal
@@ -23,6 +23,7 @@ library
         Data.Map.Generic
         Data.Map.Mutable.Generic
         Data.Map.VecMap
+        Data.Map.VecMap.Unboxed
         Data.Vector.Class
         Game
         Game.PlayerMap
@@ -30,14 +31,17 @@ library
         base >=4.7 && <5,
         MemoTrie -any,
         containers -any,
+        data-default -any,
         hashable -any,
         hashtables -any,
         pcg-random -any,
         strict -any,
-        vector -any
+        vector -any,
+        vector-th-unbox -any
     default-language: Haskell2010
     hs-source-dirs: src
     other-modules:
         Data.Dist.Internal
+        Data.Maybe.Util
         Data.Strict.Maybe.Util
         Orphans
